# Canvas.aDNA

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HOME.md  MANIFEST.md  README.md  STATE.md  home_config.yaml  iii
.obsidian/: appearance.json  core-plugins.json
git/: CLAUDE.md
how/airlock/: AIRLOCK.md
how/backlog/: AGENTS.md  idea_campaign_leg3_interface_runtime.md  (+3 more)
how/skills/: AGENTS.md  (+9 more)
iii/: CLAUDE.md  feedback_2026_06_20_document_generator_e4_2.md  feedback_2026_06_21_atelier_producers.md  feedback_2026_06_22_palette_producers.md  feedback_2026_06_23_leg3_interaction_runtime.md
what/code/canvas_context/: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
what/code/canvas_context/src/canvas_context/: __init__.py  interaction.py  loader.py  model.py  reconcile.py  resolver.py  traversal.py
what/code/canvas_context/tests/: pilot_governed_write.py  pilot_interaction_loop.py  test_interaction.py  test_interaction_degradation.py  test_interaction_loop.py  test_loader.py  test_pilot.py  test_reconcile.py  test_resolver.py  test_traversal.py
what/code/canvas_context/tests/fixtures/: _build_interaction_review.py  _build_review_source.py  interaction_review.canvas  review_request.source.json
what/code/canvas_std/: AGENTS.md  CERTIFICATION.md  CHANGELOG.md  Makefile  README.md  certify.py  pyproject.toml
what/code/canvas_std/src/canvas_std/: __init__.py  conformance.py  reserved.py  roundtrip.py  schema.py  validate.py
what/code/canvas_std/src/canvas_std/data/: adna_canvas_v2.schema.json
what/code/canvas_std/tests/: test_anchors.py  test_conformance.py  test_fixtures.py  test_interaction.py  test_longform.py  test_smoke.py
what/code/canvas_std/tests/fixtures/: adna_anchored.canvas  adna_bad_reserved.canvas  adna_interaction.canvas  adna_longform_quote.canvas  adna_native.canvas  adna_orphan_anchor.canvas  core_minimal.canvas  core_only_bad_shape.canvas  extended_styled.canvas  invalid_missing_arrow.canvas  manifest.json
what/production/_scaffold/: AGENTS.md  README.md  iii_quality_contract.md  pyproject.toml
what/production/_scaffold/examples/: .gitkeep
what/production/_scaffold/src/__producer__/: __init__.py  __main__.py  consume.py  layout.py  model.py
what/production/_scaffold/tests/: conftest.py  test_components.py  test_conformance.py  test_degradation.py  test_model_neutrality.py  test_roundtrip.py
what/production/brief_consumer/: AGENTS.md  README.md  pyproject.toml
what/production/brief_consumer/examples/: canvas_standard_brief.canvas  canvas_standard_brief.yaml
what/production/brief_consumer/src/brief_consumer/: __init__.py  __main__.py  consume.py  layout.py  model.py
what/production/brief_consumer/tests/: conftest.py  test_conformance.py  test_degradation.py  test_roundtrip.py
what/production/comic_generator/: AGENTS.md  README.md  iii_quality_contract.md  pyproject.toml
what/production/comic_generator/examples/: science_stanley_mini_issue.canvas  science_stanley_mini_issue.yaml
what/production/comic_generator/src/comic_generator/: __init__.py  __main__.py  consume.py  layout.py  model.py  panel_layout.py  panels.py  prompt.py  rlhf_hints.py  style.py
what/production/comic_generator/tests/: conftest.py  test_components.py  test_conformance.py  test_degradation.py  test_model_neutrality.py  test_panel_coverage.py  test_panel_layout.py  test_prompt_assembly.py  test_roundtrip.py
what/production/deck_generator/: AGENTS.md  README.md  iii_quality_contract.md  pyproject.toml
what/production/deck_generator/examples/: canvas_standard_deck.canvas  canvas_standard_deck.yaml
what/production/deck_generator/src/deck_generator/: __init__.py  __main__.py  consume.py  layout.py  model.py  slides.py
what/production/deck_generator/tests/: conftest.py  test_components.py  test_conformance.py  test_degradation.py  test_roundtrip.py
what/production/diagram_generator/: AGENTS.md  README.md  iii_quality_contract.md  pyproject.toml
what/production/diagram_generator/examples/: canvas_standard_flow.canvas  canvas_standard_flow.yaml
what/production/diagram_generator/src/diagram_generator/: __init__.py  __main__.py  consume.py  diagrams.py  layout.py  mermaid.py  model.py
what/production/diagram_generator/tests/: conftest.py  test_components.py  test_conformance.py  test_degradation.py  test_diagram_types.py  test_roundtrip.py
what/production/document_generator/: README.md  iii_quality_contract.md  pyproject.toml
what/production/document_generator/examples/: canvas_standard_whitepaper.canvas  canvas_standard_whitepaper.yaml  grant_proposal.canvas  grant_proposal.yaml
what/production/document_generator/src/document_generator/: __init__.py  __main__.py  blocks.py  consume.py  layout.py  model.py
what/production/document_generator/tests/: conftest.py  test_components.py  test_conformance.py  test_contracts.py  test_degradation.py  test_model_neutrality.py  test_reflow.py  test_region_class.py  test_roundtrip.py
what/production/document_generator/tests/golden/: document_small.canvas  document_small.yaml
what/production/letter_generator/: AGENTS.md  README.md  iii_quality_contract.md  pyproject.toml
what/production/letter_generator/examples/: example_letter.canvas  example_letter.yaml
what/production/letter_generator/src/letter_generator/: __init__.py  __main__.py  consume.py  layout.py  model.py
what/production/letter_generator/tests/: conftest.py  test_components.py  test_conformance.py  test_degradation.py  test_letter.py  test_model_neutrality.py  test_roundtrip.py
what/production/post_generator/: AGENTS.md  README.md  iii_quality_contract.md  pyproject.toml
what/production/post_generator/examples/: example_post_single.canvas  example_post_single.yaml  example_post_thread.canvas  example_post_thread.yaml
what/production/post_generator/src/post_generator/: __init__.py  __main__.py  consume.py  layout.py  model.py
what/production/post_generator/tests/: conftest.py  test_components.py  test_conformance.py  test_degradation.py  test_model_neutrality.py  test_post.py  test_roundtrip.py
(+332 files in other folders)
