[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# TODO(clone): rename "__producer__" -> your producer (e.g. "letter-generator"); package dir uses underscores.
name = "__producer__"
version = "0.1.0"
description = "TODO(clone): one line — <domain> spec -> a v2.0.0 aDNA-Native .canvas (Operation Palette producer)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "aDNA Labs / Canvas.aDNA (Mondrian)" }]
keywords = ["canvas", "adna", "consumer", "producer", "json-canvas"]  # TODO(clone): add domain tags
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
]
# Producer (deps allowed); the Standard's lean reference lib (canvas_std) stays zero-dep (ADR-004 two-shelf firewall).
dependencies = ["adna-canvas-std", "pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
# TODO(clone): rename both sides to <producer> = "<package>.__main__:main"
__producer__ = "__producer__.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/__producer__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
