[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brief-consumer"
version = "0.1.0"
description = "Reference net-new consumer of the aDNA Canvas Standard (Keystone E4.3) — structured brief -> v2.0.0-conformant .canvas."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "aDNA Labs / Canvas.aDNA (Mondrian)" }]
keywords = ["canvas", "adna", "consumer", "producer", "brief", "json-canvas"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Topic :: Text Processing :: Markup",
]
# A producer MAY have dependencies (the Standard's lean reference lib, canvas_std, stays zero-dep — ADR-004 two-shelf).
# `adna-canvas-std` is the installed Standard package (ADR-004 §4 dependency contract); pyyaml parses the brief input.
dependencies = ["adna-canvas-std", "pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
brief-consumer = "brief_consumer.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/brief_consumer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
