[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comic-generator"
version = "0.1.0"
description = "Reference comic consumer of the aDNA Canvas Standard (Operation Atelier A2) — a comic spec -> a v2.0.0 aDNA-Native multi-page .canvas (pages = group nodes carrying a 2D panel grid; panels carry image PROMPTS as metadata, never rendered pixels)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "aDNA Labs / Canvas.aDNA (Mondrian)" }]
keywords = ["canvas", "adna", "consumer", "producer", "comic", "panel", "image-prompt", "json-canvas"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Graphics :: Presentation",
]
# Producer (deps allowed); the Standard's lean reference lib (canvas_std) stays zero-dep (ADR-004 two-shelf).
dependencies = ["adna-canvas-std", "pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
comic-generator = "comic_generator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/comic_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
