[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deck-generator"
version = "0.1.0"
description = "Reference net-new consumer of the aDNA Canvas Standard (Keystone E4.4) — a deck spec -> a v2.0.0 aDNA-Native deck .canvas (slides = group nodes)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "aDNA Labs / Canvas.aDNA (Mondrian)" }]
keywords = ["canvas", "adna", "consumer", "producer", "deck", "presentation", "json-canvas"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Graphics :: Presentation",
]
# Producer (deps allowed); the Standard's lean reference lib (canvas_std) stays zero-dep (ADR-004 two-shelf).
dependencies = ["adna-canvas-std", "pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
deck-generator = "deck_generator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/deck_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
