[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "letter-generator"
version = "0.1.0"
description = "Net-new producer of the aDNA Canvas Standard (Operation Palette P2) — a letter spec -> a v2.0.0 aDNA-Native one-page-letter .canvas (single canonical surface, one paged region)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "aDNA Labs / Canvas.aDNA (Mondrian)" }]
keywords = ["canvas", "adna", "consumer", "producer", "letter", "document", "json-canvas"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
]
# Producer (deps allowed); the Standard's lean reference lib (canvas_std) stays zero-dep (ADR-004 two-shelf firewall).
dependencies = ["adna-canvas-std", "pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
letter-generator = "letter_generator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/letter_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
