[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "post-generator"
version = "0.1.0"
description = "Net-new producer of the aDNA Canvas Standard (Operation Palette P3) — a social-post spec -> a v2.0.0 aDNA-Native .canvas (single post or thread; image prompts as metadata, no render)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "aDNA Labs / Canvas.aDNA (Mondrian)" }]
keywords = ["canvas", "adna", "consumer", "producer", "post", "social", "thread", "json-canvas"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
]
# Producer (deps allowed); the Standard's lean reference lib (canvas_std) stays zero-dep (ADR-004 two-shelf firewall).
dependencies = ["adna-canvas-std", "pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
post-generator = "post_generator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/post_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
